fix link for homepage

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ Elevate your style with Nivs Jewels, the epitome of sophistication and beauty in
     
 
   <!-- Dependency Scripts -->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
-  <script src="/libs/popper/js/popper.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+  <!-- <script src="/libs/popper/js/popper.min.js"></script> -->
   <script src="/libs/jquery/js/jquery.min.js"></script>
   <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="libs/slick/js/slick.min.js"></script>
